# powerbi_design_mcp_server

./: README.md  pyproject.toml
docs/: architecture.md
examples/: .env.example  llm_prompts.md  sample_modernization_flow.md  style_guide.enterprise.json
src/auth/: token_provider.py
src/config/: settings.py
src/diffing/: diff_engine.py
src/fabric_client/: client.py
src/mcp_tools/: tools.py
src/models/: schemas.py
src/parser/: definition_parser.py
src/server/: mcp_server.py  service.py
src/transformations/: style_engine.py
src/utils/: scoring.py
src/validation/: validator.py
tests/: test_diff_engine.py  test_extract_style_guide.py  test_service_patching.py  test_style_engine.py  test_validator.py
tests/integration/: test_fabric_client_stub.py
