[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerbi-design-mcp-server"
version = "0.1.0"
description = "MCP server for safe Power BI/Fabric report design modernization"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Power BI Design MCP Team"}]
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "structlog>=24.1.0",
  "fastmcp>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
markers = ["integration: marks tests requiring live Fabric tenant"]
